# ot-harjoitustyo

./: .coverage  .gitignore  .pylintrc  pyproject.toml  readme.md  tasks.py
.cache/v/cache/: lastfailed
dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  testausdokumentti.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml  tasks.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: pyproject.toml
laskarit/viikko2/unicafe/src/: .coverage
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: config.py  database_connection.py  index.py  index2.py  initialize_database.py
src/repositories/: calculator_repository.py
src/services/: calculator.py  calculator_service.py  operations.py  operations_service.py
src/tests/: calculator_repository_test.py  calculator_service_test.py  calculator_test.py  conftest.py
src/ui/: gui.py  ui.py
