[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Doubleneck <antti.vuorenmaa@kolumbus.fi>"]

[tool.poetry.dependencies]
python = "^3.6"
cowsay = "^4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
